BAP-9965 Workflow progress line overlaps page navigation block; fixed styles; added logic that tracks workflow progress block width

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -2664,9 +2664,6 @@ label.radio.error {
   #bookmark-buttons{
     float: right;
   }
-  #before-content-addition {
-    order: 900;
-  }
   #breadcrumb {
     float:left;
   }
